--- a/libs/questionnaire/questionnaire-listing/src/lib/questionnaire-listing.component.html
+++ b/libs/questionnaire/questionnaire-listing/src/lib/questionnaire-listing.component.html
@@ -25,13 +25,29 @@
             </ng-container>
 
             <ng-container matColumnDef='name'>
-              <th mat-header-cell *matHeaderCellDef> {{constantDataService.FIELD_NAME.NAME | titlecase}} </th>
+              <th mat-header-cell *matHeaderCellDef>
+                <hidden-innovation-sorting-header-name
+                  [title]='constantDataService.FIELD_NAME.NAME | titlecase'
+                  [ctrlEnabled]='filters.controls.nameSort?.enabled'
+                  [ctrlValue]='filters.controls.nameSort?.value'
+                  [isDisabled]='(store.isActing$ | async)'
+                  (emitSorting)='updateSorting("nameSort")'
+                ></hidden-innovation-sorting-header-name>
+              </th>
               <td mat-cell *matCellDef='let element'
                   [matTooltip]='element.name'> {{(element.name | maxStringLimit) || '--'}} </td>
             </ng-container>
 
             <ng-container matColumnDef='date_added'>
-              <th mat-header-cell *matHeaderCellDef> {{constantDataService.FIELD_NAME.DATE_ADDED | titlecase}}</th>
+              <th mat-header-cell *matHeaderCellDef>
+                <hidden-innovation-sorting-header-date
+                  [title]='constantDataService.FIELD_NAME.DATE_ADDED | titlecase'
+                  [ctrlEnabled]='filters.controls.dateSort?.enabled'
+                  [ctrlValue]='filters.controls.dateSort?.value'
+                  [isDisabled]='(store.isActing$ | async)'
+                  (emitSorting)='updateSorting("dateSort")'
+                ></hidden-innovation-sorting-header-date>
+              </th>
               <td mat-cell *matCellDef='let element'> {{(element.created_at | date: 'shortDate') || '--'}}</td>
             </ng-container>
 
@@ -43,7 +59,35 @@
 
             <ng-container matColumnDef='scoring'>
               <th mat-header-cell
-                  *matHeaderCellDef> {{constantDataService.FIELD_NAME.SCORING | titlecase}} </th>
+                  *matHeaderCellDef>
+                <div class='d-flex align-items-center justify-content-between'>
+                  <span>
+                    {{constantDataService.FIELD_NAME.SCORING | titlecase}}
+                  </span>
+                  <div class='d-flex align-items-center'>
+                    <button mat-icon-button class='mr-3' [matMenuTriggerFor]='scoringMenu'
+                            [disabled]='(store.isActing$ | async)'
+                            color='{{(filters.controls.scoring?.enabled$ | async) ? "primary" : ""}}'>
+                      <mat-icon style='font-size: 20px'>filter_list</mat-icon>
+                    </button>
+                    <mat-menu #scoringMenu='matMenu'>
+                      <mat-selection-list color='primary'
+                                          (selectionChange)='updateFilterChange($event, filters.controls.scoring)'
+                                          [multiple]='false' class='pt-0'>
+                        <mat-list-option [value]='"TRUE"'>
+                          <h6 class='mat-h6'>Enabled</h6>
+                        </mat-list-option>
+                        <mat-list-option [value]='"FALSE"'>
+                          <h6 class='mat-h6'>Disabled</h6>
+                        </mat-list-option>
+                        <mat-list-option [value]='undefined'>
+                          <h6 class='mat-h6'>Clear</h6>
+                        </mat-list-option>
+                      </mat-selection-list>
+                    </mat-menu>
+                  </div>
+                </div>
+              </th>
               <td mat-cell *matCellDef='let element'>
                 <hidden-innovation-common-data-field-status
                   *ngIf='!!element.isScoring'
@@ -55,7 +99,37 @@
 
             <ng-container matColumnDef='status'>
               <th mat-header-cell
-                  *matHeaderCellDef> {{constantDataService.FIELD_NAME.STATUS | titlecase}} </th>
+                  *matHeaderCellDef>
+                <div class='d-flex align-items-center justify-content-between'>
+                  <span>
+                    {{constantDataService.FIELD_NAME.STATUS | titlecase}}
+                  </span>
+                  <div class='d-flex align-items-center'>
+                    <button mat-icon-button class='mr-3' [matMenuTriggerFor]='statusMenu'
+                            [disabled]='(store.isActing$ | async)'
+                            color='{{filters.controls.active?.value ? "primary" : ""}}'>
+                      <mat-icon style='font-size: 20px'>filter_list</mat-icon>
+                    </button>
+                    <mat-menu #statusMenu='matMenu'>
+
+                      <mat-selection-list color='primary'
+                                          (selectionChange)='updateFilterChange($event, filters.controls.active)'
+                                          [multiple]='false' class='pt-0'>
+                        <mat-list-option [value]='"TRUE"'>
+                          <h6 class='mat-h6'>{{userStatusEnum.ACTIVE | titlecase}}</h6>
+                        </mat-list-option>
+                        <mat-list-option [value]='"FALSE"'>
+                          <h6 class='mat-h6'>{{userStatusEnum.INACTIVE | titlecase}}</h6>
+                        </mat-list-option>
+                        <mat-list-option [value]='undefined'>
+                          <h6 class='mat-h6'>Clear</h6>
+                        </mat-list-option>
+                      </mat-selection-list>
+                    </mat-menu>
+                  </div>
+                </div>
+
+              </th>
               <td mat-cell *matCellDef='let element'>
                 <hidden-innovation-common-data-field-status
                   [chipType]='element.isActive ? statusChipType.SUCCESS : statusChipType.WARNING'
@@ -76,11 +150,12 @@
                     <mat-icon>create</mat-icon>
                     <span>{{constantDataService.BUTTON_NAME.EDIT | titlecase}}</span>
                   </button>
-                  <button (click)='store.toggleActive(row.id, row.isActive)' mat-menu-item [disabled]='(store.isLoading$ | async) || (store.isActing$ | async)'>
+                  <button (click)='store.toggleActive(row.id, row.isActive)' mat-menu-item
+                          [disabled]='(store.isLoading$ | async) || (store.isActing$ | async)'>
                     <mat-icon>{{row.isActive ? "block" : "check_circle_outline"}}</mat-icon>
                     <span>{{(row.isActive ? constantDataService.BUTTON_NAME.DEACTIVATE : constantDataService.BUTTON_NAME.ACTIVATE) | titlecase}}</span>
                   </button>
-                  <button mat-menu-item (click)='store.deleteQuestionnaire(row.id, pageSize, pageIndex)'>
+                  <button mat-menu-item (click)='deleteQuestionnaire(row.id)'>
                     <mat-icon>delete</mat-icon>
                     <span>{{constantDataService.BUTTON_NAME.DELETE | titlecase}}</span>
                   </button>
