--- a/libs/tags/tags/src/lib/tags.component.html
+++ b/libs/tags/tags/src/lib/tags.component.html
@@ -27,21 +27,13 @@
           <table mat-table [dataSource]='tags' class='w-100' [trackBy]='trackById'>
             <ng-container matColumnDef='name'>
               <th mat-header-cell *matHeaderCellDef>
-                <div class='d-flex align-items-center justify-content-between'>
-                  <span>
-                    {{constantDataService.FIELD_NAME.NAME | titlecase}}
-                  </span>
-                  <div class='d-flex align-items-center'>
-                    <mat-icon
-                      style='font-size: 16px; margin-bottom: -8px; width: 16px;'>{{filters.controls.nameSort?.enabled ? (filters.controls.nameSort?.value === sortingEnum.ASC ? "keyboard_arrow_up" : "keyboard_arrow_down") : ""}}</mat-icon>
-                    <button mat-icon-button class='mr-3'
-                            [disabled]='(store.isActing$ | async)'
-                            (click)='updateSorting("nameSort")'
-                            color='{{filters.controls.nameSort?.enabled ? "primary" : ""}}'>
-                      <mat-icon style='font-size: 20px'>sort_by_alpha</mat-icon>
-                    </button>
-                  </div>
-                </div>
+                <hidden-innovation-sorting-header-name
+                  [title]='constantDataService.FIELD_NAME.NAME | titlecase'
+                  [ctrlEnabled]='filters.controls.nameSort?.enabled'
+                  [ctrlValue]='filters.controls.nameSort?.value'
+                  [isDisabled]='(store.isActing$ | async)'
+                  (emitSorting)='updateSorting("nameSort")'
+                ></hidden-innovation-sorting-header-name>
               </th>
               <td mat-cell *matCellDef='let element'
                   [matTooltip]='element.name'> {{(element.name | maxStringLimit: 30) || '--'}}  </td>
@@ -102,20 +94,13 @@
 
             <ng-container matColumnDef='date_modified'>
               <th mat-header-cell *matHeaderCellDef>
-                <div class='d-flex align-items-center justify-content-between'>
-                  <span>
-                    {{constantDataService.FIELD_NAME.DATE_MODIFIED | titlecase}}
-                  </span>
-                  <div class='d-flex align-items-center'>
-                    <button mat-icon-button class='mr-3'
-                            [disabled]='(store.isActing$ | async)'
-                            (click)='updateSorting("dateSort")'
-                            color='{{filters.controls.dateSort?.enabled ? "primary" : ""}}'>
-                      <mat-icon
-                        style='font-size: 20px;'>{{filters.controls.dateSort?.enabled ? (filters.controls.dateSort?.value === sortingEnum.ASC ? "arrow_upward" : "arrow_downward") : "sort"}}</mat-icon>
-                    </button>
-                  </div>
-                </div>
+                <hidden-innovation-sorting-header-date
+                  [title]='constantDataService.FIELD_NAME.DATE_MODIFIED | titlecase'
+                  [ctrlEnabled]='filters.controls.dateSort?.enabled'
+                  [ctrlValue]='filters.controls.dateSort?.value'
+                  [isDisabled]='(store.isActing$ | async)'
+                  (emitSorting)='updateSorting("dateSort")'
+                ></hidden-innovation-sorting-header-date>
               </th>
               <td mat-cell *matCellDef='let element'> {{(element.updated_at | date: 'shortDate') || '--'}}  </td>
             </ng-container>
