--- a/libs/shared/ui/questionnaire-question-form/src/lib/questionnaire-question-form.component.html
+++ b/libs/shared/ui/questionnaire-question-form/src/lib/questionnaire-question-form.component.html
@@ -182,10 +182,11 @@
                             [isInvalid]='imageAnswerGroup(i).controls.imageId.invalid && imageAnswerGroup(i).controls.imageId.touched'
                             (imageUploadRes)='mapImageToForm($event, i)'
                           ></hidden-innovation-image-picker>
+                          <mat-error *ngIf='imageAnswerGroup(i).controls.imageId.invalid && imageAnswerGroup(i).controls.imageId.touched'><small class='ml-2'>Image is required</small></mat-error>
                         </div>
                       </ng-template>
                     </div>
-                    <div class='row'>
+                    <div class='row mb-2'>
                       <div class='col-3'></div>
                       <div class='col-9'>
                         <hidden-innovation-common-form-field
