--- a/libs/tags/tags/src/lib/tags.component.html
+++ b/libs/tags/tags/src/lib/tags.component.html
@@ -1,11 +1,19 @@
 <div class='p-4'>
   <div class='container-fluid p-0'>
-    <div class='row mb-4'>
-      <div class='col-3'>
+    <div class='row'>
+      <div class='col-3 mb-1'>
+        <mat-form-field class='w-100'>
+          <mat-label>Search</mat-label>
+          <input autocomplete='off' [formControl]='filters.controls.search' matInput>
+          <button mat-icon-button matSuffix *ngIf='filters.controls.search.value'
+                  (click)='filters.controls.search.setValue("")'>
+            <mat-icon style='font-size: 14px'>close</mat-icon>
+          </button>
+        </mat-form-field>
       </div>
-      <div class='col d-flex align-items-center justify-content-end'>
+      <div class='col d-flex justify-content-end align-items-center'>
         <mat-spinner class='mr-4' [diameter]='20' *ngIf='store.isLoading$ | async'></mat-spinner>
-        <button mat-flat-button color='primary' class='ml-2' [matMenuTriggerFor]='tagMenu'
+        <button mat-flat-button color='primary' [matMenuTriggerFor]='tagMenu'
                 [disabled]='(store.isActing$ | async)'>
           <mat-icon class='mr-2'>add</mat-icon>
           {{"New Tag"}}
