--- a/libs/user/user-listing/src/lib/user-listing.component.html
+++ b/libs/user/user-listing/src/lib/user-listing.component.html
@@ -1,7 +1,7 @@
 <div class='p-4'>
   <div class='container-fluid p-0'>
     <div class='row'>
-      <div class='col-3'>
+      <div class='col-3 mb-1'>
         <mat-form-field class='w-100'>
           <mat-label>Search</mat-label>
           <input [formControl]='name' matInput>
@@ -10,7 +10,7 @@
           </button>
         </mat-form-field>
       </div>
-      <div class='col d-flex align-items-center justify-content-end'>
+      <div class='col d-flex justify-content-end align-items-center'>
         <mat-spinner class='mr-4' [diameter]='20' *ngIf='store.isLoading$ | async'></mat-spinner>
       </div>
     </div>
