--- a/libs/shared/ui/common-form-field/src/lib/common-form-field.component.html
+++ b/libs/shared/ui/common-form-field/src/lib/common-form-field.component.html
@@ -3,30 +3,38 @@
   <input matInput autocomplete='no' [disabled]='disabled' [readonly]='readonly' type='text'
          [placeholder]='placeholder || label'
          [formControl]='control'>
-  <mat-error
-    *ngIf='control.errors?.required || control.errors?.notEmpty'>
-    {{label}} {{errorMessage.required}}</mat-error>
-  <mat-error
-    *ngIf='control.errors?.invalid || control.errors?.numeric'>{{errorMessage.invalid}}</mat-error>
-  <mat-error
-    *ngIf='control.errors?.hexColor'>{{errorMessage.invalid}}</mat-error>
-  <mat-error
-    *ngIf='(control.errors?.alpha || control.errors?.pattern)'>{{errorMessage.invalid}}</mat-error>
-  <mat-error
-    *ngIf='control.errors?.maxLength'>Must not
-    exceed {{control.errors?.maxLength?.refValues[1]}} character limit
-  </mat-error>
-  <mat-error
-    *ngIf='control.errors?.minlength'>Must be greater than {{control.errors?.minlength?.requiredLength}} characters
-  </mat-error>
-  <mat-error
-    *ngIf='control.errors?.min'>Invalid! Must be greater than {{control.errors?.min?.min}}</mat-error>
-  <mat-error
-    *ngIf='control.errors?.upperCase && !control.errors?.invalid'>{{label}} must be is uppercase only
-  </mat-error>
-  <mat-error
-    *ngIf='control.errors?.email'>{{errorMessage.invalid}}</mat-error>
-  <mat-error
-    *ngIf='control.errors?.alphaNumeric'>Must not contain any special character.
+  <mat-error>
+    <ng-template [ngIf]='((control.touch$ | async) || (control.dirty$ | async)) && (control.errors$ | async)' let-error>
+      <ng-container *ngIf='error?.required || error?.notEmpty'>
+        {{label}} {{errorMessage.required}} <br>
+      </ng-container>
+      <ng-container *ngIf='error?.invalid || error?.numeric'>
+        {{errorMessage.invalid}} <br>
+      </ng-container>
+      <ng-container *ngIf='error?.hexColor'>
+        {{errorMessage.invalid}} <br>
+      </ng-container>
+      <ng-container *ngIf='(error?.alpha || error?.pattern)'>
+        {{errorMessage.invalid}} <br>
+      </ng-container>
+      <ng-container *ngIf='error?.maxLength'>
+        Must not exceed {{error?.maxLength?.refValues[1]}} character limit <br>
+      </ng-container>
+      <ng-container *ngIf='error?.minlength'>
+        Must be greater than {{error?.minlength?.requiredLength}} characters <br>
+      </ng-container>
+      <ng-container *ngIf='error?.min'>
+        Invalid! Must be greater than {{error?.min?.min}} <br>
+      </ng-container>
+      <ng-container *ngIf='error?.upperCase && !error?.invalid'>
+        {{label}} must be is uppercase only <br>
+      </ng-container>
+      <ng-container *ngIf='error?.email'>
+        {{errorMessage.invalid}} <br>
+      </ng-container>
+      <ng-container *ngIf='error?.alphaNumeric'>
+        Must not contain any special character. <br>
+      </ng-container>
+    </ng-template>
   </mat-error>
 </mat-form-field>
