feat(OH-565-test): Update test UI form fields

--- a/libs/test/test-listing/src/lib/test-listing.component.html
+++ b/libs/test/test-listing/src/lib/test-listing.component.html
@@ -190,6 +190,10 @@
                           <span>{{constantDataService.BUTTON_NAME.EDIT | titlecase}}</span>
                         </button>
                         <button mat-menu-item>
+                          <mat-icon>{{row.isActive ? "block" : "check_circle_outline"}}</mat-icon>
+                          <span>{{(row.isActive ? publishStatusEnum.UNPUBLISHED : publishStatusEnum.PUBLISHED) | titlecase}}</span>
+                        </button>
+                        <button mat-menu-item>
                           <mat-icon>delete</mat-icon>
                           <span>{{constantDataService.BUTTON_NAME.DELETE | titlecase}}</span>
                         </button>
